--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -58,12 +58,12 @@
 </template>
 <template class='financialChartRangeSelector'>
 	<div class='financialChartRangeSelector'>
-		<label><input type='radio' class='rangeSelectorOneMonth' value='1m'><span>1m</span></label>
-		<label><input type='radio' class='rangeSelectorThreeMonths' value='3m'><span>3m</span></label>
-		<label><input type='radio' class='rangeSelectorSixMonths' value='6m'><span>6m</span></label>
-		<label><input type='radio' class='rangeSelectorYTD' value='YTD'><span>YTD</span></label>
-		<label><input type='radio' class='rangeSelectorOneYear' value='1y'><span>1y</span></label>
-		<label><input type='radio' class='rangeSelectorAll' value='all'><span>all</span></label>
+		<label class='rangeSelectorOneMonth'><input type='radio' value='1m'><span>1m</span></label>
+		<label class='rangeSelectorThreeMonths'><input type='radio' value='3m'><span>3m</span></label>
+		<label class='rangeSelectorSixMonths'><input type='radio' value='6m'><span>6m</span></label>
+		<label class='rangeSelectorYTD'><input type='radio' value='YTD'><span>YTD</span></label>
+		<label class='rangeSelectorOneYear'><input type='radio' value='1y'><span>1y</span></label>
+		<label class='rangeSelectorAll'><input type='radio' value='all'><span>all</span></label>
 	</div>
 </template>
 <template class='financialChartTrendLinePicker'>
