--- a/tests/unit/videoplayer/tests.html
+++ b/tests/unit/videoplayer/tests.html
@@ -433,6 +433,8 @@
 	var testId_51 = "igVidioPlayer Dummy Test";
 	var testId_52 = "igVidioPlayer Test entering fullscrren via double click"
 	var testId_53 = "igVidioPlayer Test setting sources after initiation"
+	var testId_54 = "igVidioPlayer Test fullscreen option class_true";
+	var testId_55 = "igVidioPlayer Test fullscreen option class_false";
 
 	test(testId_16, function() {
 		var controls = $('#player1_title_ctrls');
@@ -1643,6 +1645,56 @@
 				$("#player14").remove();
 			}, 600);
 		});
+
+		test(testId_54, function () {
+			$("#player15").igVideoPlayer({
+				sources: [
+					"http://medias.jilion.com/sublimevideo/dartmoor.mov",
+					"http://medias.jilion.com/sublimevideo/dartmoor.mp4",
+					"http://medias.jilion.com/sublimevideo/dartmoor.webm",
+					"http://medias.jilion.com/sublimevideo/dartmoor.ogv"],
+				fullscreen: true
+			});
+
+			var hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, true, "The \"ui-igplayer-full-screen-mode\" class should be added to the body when the video player fullscreen option is set to true.");
+
+			$('#player15').igVideoPlayer('option', 'fullscreen', false);
+			hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, false, "The \"ui-igplayer-full-screen-mode\" class should be removed from body when the video player fullscreen option is set to false.");
+
+			$('#player15').igVideoPlayer('option', 'fullscreen', true);
+			hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, true, "The \"ui-igplayer-full-screen-mode\" class should be added to the body when the video player fullscreen option is set to true.");
+			
+			$('#player15').igVideoPlayer('option', 'fullscreen', false);
+			$('#player15').remove();
+		});
+
+		test(testId_55, function () {
+			$("#player16").igVideoPlayer({
+				sources: [
+					"http://medias.jilion.com/sublimevideo/dartmoor.mov",
+					"http://medias.jilion.com/sublimevideo/dartmoor.mp4",
+					"http://medias.jilion.com/sublimevideo/dartmoor.webm",
+					"http://medias.jilion.com/sublimevideo/dartmoor.ogv"],
+				fullscreen: false
+			});
+
+			var hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, false, "The \"ui-igplayer-full-screen-mode\" class should be removed from body when the video player fullscreen option is set to false.");
+
+			$('#player16').igVideoPlayer('option', 'fullscreen', true);
+			hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, true, "The \"ui-igplayer-full-screen-mode\" class should be added to the body when the video player fullscreen option is set to true.");
+
+			$('#player16').igVideoPlayer('option', 'fullscreen', false);
+			hasFullScreenClass = $("body").hasClass("ui-igplayer-full-screen-mode");
+			equal(hasFullScreenClass, false, "The \"ui-igplayer-full-screen-mode\" class should be removed from body when the video player fullscreen option is set to false.");
+			
+			$('#player16').remove();
+		});
+
 	
 	function checkButton(button) {
 		checkClass(button, 'ui-widget');
@@ -1729,6 +1781,13 @@
 	<br/>
 	<h1>igVideoPlayer 11</h1>	
 	<div id="player11"></div>
+	<br/>
+	<br/>
+	<h1>igVideoPlayer 15</h1>
+	<div id="player15"></div>
+	<br/>
+	<br/>
+	<div id="player16"></div>
 	<br/>
 	<br/>
 	<video id="video1" controls="true" src="http://video-js.zencoder.com/oceans-clip.mp4" type="video/mp4" ></video>
