--- a/tests/unit/editors/numericEditor/tests.html
+++ b/tests/unit/editors/numericEditor/tests.html
@@ -2563,6 +2563,30 @@
 		equal($editor.igNumericEditor("value"), null, "Value should be null");
 		$editor.remove();
 	});
+
+	testId = 'Numeric Editor Scrollbar maintains scroll position after animation';
+	QUnit.test(testId,function (assert) {
+		assert.expect(2);
+		done = assert.async();
+		var dropDownScrollPosition = 0;
+		var listValues = [10, 15, 20, 25, 30, 35, 40];
+		var $editor = $("<input id='scrollbarNumericEditor'/>").appendTo("#testBedContainer").igNumericEditor({
+			 allowNullValue: true, nullValue: null, value: 40, listItems : listValues
+		});
+		
+		$editor.igNumericEditor("dropDownContainer").wrap("<div class='ui-effects-wrapper'></div>");
+		$editor.igNumericEditor("dropDownButton").click();
+		$editor.igNumericEditor("dropDownContainer").scrollTop(0);
+		$.ig.TestUtil.wait(400).then(function () {
+			assert.ok($editor.igNumericEditor("value") === 40, "Value should be changed to 40.");
+			assert.ok($editor.igNumericEditor("dropDownContainer").scrollTop() !== 0, "The scroll should not be positioned at the top of the dropdown");
+			done();
+		}).catch(function (er) {
+			assert.pushResult({ result: false, message: er.message });
+			throw er;
+			done();
+		});
+	});
 });
 	function testSelection(input, start, end) {
 		equal(input[0].selectionStart, start, "The selection doesn't start from index " + start);
