--- a/tests/unit/dataSource/remote/tests.html
+++ b/tests/unit/dataSource/remote/tests.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<div style="float:right;width:400px;overflow:auto"">
+<div style="float:right;width:400px;overflow:auto">
     <h1 id="qunit-header">Test results</h1>
      <h2 id="qunit-banner"></h2>
      <h2 id="qunit-userAgent"></h2>
