--- a/tests/unit/toolbarbutton/tests.html
+++ b/tests/unit/toolbarbutton/tests.html
@@ -19,71 +19,6 @@
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
     <script type="text/javascript" src="../../../src/js/modules/infragistics.ui.shared.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.toolbarbutton.js"></script>
-
-	<script type="text/javascript">
-	    var equalWithEpsilon = function (a, b, epsilon) {
-	        return Math.abs(a - b) < epsilon;
-	    }
-
-	    var unitTestsSetup = {
-	        toolbarButtonSelector: "toolbar-button",
-	        actualToolbarButton: null,
-	        setup: function () {
-	            $('body').append($("<div></div>").attr("id", this.toolbarButtonSelector));
-	            $(this.id(this.toolbarButtonSelector)).igToolbarButton();
-	            this.actualToolbarButton = $(this.id(this.toolbarButtonSelector)).data("ui-igToolbarButton");
-	        },
-	        teardown: function () {
-	            $(this.id(this.toolbarButtonSelector)).remove();
-	        },
-	        id: function (selector) {
-	            return "#" + selector;
-	        }
-	    };
-
-	    module("igToolbarButton unit tests", unitTestsSetup);
-
-	    test("_setOptions", function () {
-	        ok(this.actualToolbarButton.options.allowToggling, "allowToggling is true");
-	        this.actualToolbarButton._setOption("allowToggling", false);
-	        ok(!this.actualToolbarButton.options.allowToggling, "allowToggling is false");
-
-	        ok(!this.actualToolbarButton.options.isSelected, "isSelected is false");
-	        this.actualToolbarButton._setOption("isSelected", true);
-	        ok(this.actualToolbarButton.options.isSelected, "isSelected is true");
-	    });
-
-		test('events', function() {
-			this.actualToolbarButton.options.disabled = true;
-			this.actualToolbarButton.element.click();
-			ok(!this.actualToolbarButton.element.hasClass(this.actualToolbarButton.options.css.buttonActiveClasses), 'Should not be active');
-
-			this.actualToolbarButton.options.disabled = false;
-			this.actualToolbarButton.element.click();
-			ok(this.actualToolbarButton.element.hasClass(this.actualToolbarButton.options.css.buttonActiveClasses), 'Should be active');
-
-			this.actualToolbarButton.options.allowToggling = false;
-
-			this.actualToolbarButton.element.mousedown();
-			ok(this.actualToolbarButton.element.hasClass(this.actualToolbarButton.options.css.buttonActiveClasses), 'mousedown event');
-
-			this.actualToolbarButton.element.mouseup();
-			ok(!this.actualToolbarButton.element.hasClass(this.actualToolbarButton.options.css.buttonHoverClasses), 'mouseup event');
-			ok(!this.actualToolbarButton.element.hasClass(this.actualToolbarButton.options.css.buttonActiveClasses), 'mouseup event');
-		});
-	</script>
+	<script type="text/javascript" src="toolbarbtn-test.js" ></script>	
 </head>
-<body>
-	<!--div id="qunit"></div>
-    <div id="qunit-fixture"></div>-->
-
-
-	<div style="float:right;width:400px;overflow:auto;">
-		<h1 id="qunit-header">Test results</h1>
-		<h2 id="qunit-banner"></h2>
-		<h2 id="qunit-userAgent"></h2>
-		<ol id="qunit-tests"></ol>
-	</div>
-
-</body>
 </html>
