--- a/tests/unit/editors/Bugs/tests.html
+++ b/tests/unit/editors/Bugs/tests.html
@@ -1576,7 +1576,7 @@
 			});
 
 			QUnit.test('Bug 1666 - textChanged not triggered on clear w/ allowNullValue', function (assert) {
-				assert.expect(4);
+				assert.expect(8);
 				var $editor =  $("<input/>").appendTo("#testBedContainer").igTextEditor({
 						value: "some text",
 						buttonType: "clear",
@@ -1593,10 +1593,36 @@
 				});
 
 				$clearButton.click();
-				assert.ok(textChangedFired, "textChanged event not fired");
-				assert.ok(valueChangedFired, "valueChanged event not fired");
-				assert.strictEqual($editor.igTextEditor("value"), null, "Value did not clear");
-				assert.strictEqual($editor.igTextEditor("field").val(), "", "Text did not clear");
+				assert.ok(textChangedFired, "igTextEditor textChanged event not fired");
+				assert.ok(valueChangedFired, "igTextEditor valueChanged event not fired");
+				assert.strictEqual($editor.igTextEditor("value"), null, "igTextEditor value did not clear");
+				assert.strictEqual($editor.igTextEditor("field").val(), "", "igTextEditor text did not clear");
+
+				$editor.off();
+				$editor.remove();
+
+				// numeric editor
+				$editor =  $("<input/>").appendTo("#testBedContainer").igNumericEditor({
+						value: 357,
+						buttonType: "clear",
+						allowNullValue: true
+					});
+				$clearButton =  $editor.igNumericEditor("clearButton"),
+				textChangedFired = false;
+				valueChangedFired = false;
+
+				$editor.one("ignumericeditortextchanged", function (evt, ui) {
+					textChangedFired = true;
+				});
+				$editor.one("ignumericeditorvaluechanged", function (evt, ui) {
+					valueChangedFired = true;
+				});
+
+				$clearButton.click();
+				assert.ok(textChangedFired, "igNumericEditor textChanged event not fired");
+				assert.ok(valueChangedFired, "igNumericEditor valueChanged event not fired");
+				assert.strictEqual($editor.igNumericEditor("value"), null, "igNumericEditor value did not clear");
+				assert.strictEqual($editor.igNumericEditor("field").val(), "", "igNumericEditor text did not clear");
 				
 				$editor.remove()
 			});
