--- a/tests/unit/regional/tests.html
+++ b/tests/unit/regional/tests.html
@@ -32,86 +32,8 @@
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.notifier.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.validator.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.combo.js"></script>
-
-	<script type="text/javascript">
-	$(function () {
-		var comboNumbers = [
-			{ ID: 1, Salary: 2600 },
-			{ ID: 2, Salary: 600 },
-			{ ID: 3, Salary: 300 },
-			{ ID: 4, Salary: 800 },
-			{ ID: 5, Salary: 5000 },
-			{ ID: 6, Salary: 1500 },
-			{ ID: 7, Salary: 5000 },
-			{ ID: 8, Salary: 3500 },
-			{ ID: 9, Salary: 200 }
-		];
-		var comboDates = [
-			{ ID: 1, HireDate: new Date ("08/01/2017") },
-			{ ID: 2, HireDate: new Date ("08/15/2017") },
-			{ ID: 3, HireDate: new Date ("12/23/2013") },
-			{ ID: 4, HireDate: new Date ("04/14/2010") },
-			{ ID: 5, HireDate: new Date ("12/10/2013") },
-			{ ID: 6, HireDate: new Date ("05/13/2012") },
-			{ ID: 7, HireDate: new Date ("02/11/2013") },
-			{ ID: 8, HireDate: new Date ("03/29/2010") },
-			{ ID: 9, HireDate: new Date ("06/13/2016") }
-		];
-		$("#comboDateRegional").igCombo({
-				dataSource: comboDates,
-				format : "dateLong",
-				textKey: 'HireDate',
-				valueKey: 'ID',
-				regional: "de"
-			});
-		$("#comboNumericRegional").igCombo({
-			dataSource: comboNumbers,
-			format : "currency",
-			textKey: 'Salary',
-			valueKey: 'ID'
-		});
-		module("Runtime regional changes", {
-			setup: function() {},
-			teardown: function() {}
-		});
-		test("Loading correct regional in combo for date field", 3, function () {
-			ok($("#comboDateRegional").igCombo("items")[0].element.text() == "Dienstag, 1. August 2017", "Date field should be with german regional settings");
-			$("#comboDateRegional").igCombo("option", "regional", "bg");
-			ok($("#comboDateRegional").igCombo("items")[0].element.text() == "01 Август 2017 г.", "Date field should be with bulgarian regional settings");
-			$("#comboDateRegional").igCombo("option", "regional", "ja");
-			ok($("#comboDateRegional").igCombo("items")[0].element.text() == "2017年8月1日", "Date field should be with japanese regional settings");
-		});
-		test("Loading correct regional in combo for numeric field", 3, function () {
-			ok($("#comboNumericRegional").igCombo("items")[0].element.text() == "$2,600.00", "Numeric field should be with default regional settings");
-			$("#comboNumericRegional").igCombo("option", "regional", "bg");
-			ok($("#comboNumericRegional").igCombo("items")[0].element.text() == "2 600,00 лв", "Numeric field should be with bulgarian regional settings");
-			$("#comboNumericRegional").igCombo("option", "regional", "ja");
-			ok($("#comboNumericRegional").igCombo("items")[0].element.text() == "¥2,600", "Numeric field should be with japanese regional settings");
-		});
-
-		test("Loading correct regional in combo when changing global regional", function () {
-			$("#comboDateRegional").data("igCombo")._userPreset.regional = null;
-			$("#comboNumericRegional").data("igCombo")._userPreset.regional = null;
-			$.ig.util.changeGlobalRegional("fr");
-			ok($("#comboDateRegional").igCombo("items")[0].element.text() == "Mardi 1 Août 2017", "Date field should be with french regional settings");
-			ok($("#comboNumericRegional").igCombo("items")[0].element.text() == "2 600,00 €", "Numeric field should be with french regional settings");
-		});
-	});
-	</script>
-	<style type="text/css">
-	</style>
+	<script type="text/javascript" src="regional-test.js"></script>	
 </head>
 <body>
-	<div style="float:right;width:400px;overflow:auto">
-		<h1 id="qunit-header">Test results</h1>
-		<h2 id="qunit-banner"></h2>
-		<h2 id="qunit-userAgent"></h2>
-		<ol id="qunit-tests"></ol>
-	</div>
-	<div style="float: left;" id="testbed">
-		<input id="comboDateRegional" />
-		<br />
-		<input id="comboNumericRegional" />
-	</div>
 </body>
 </html>
