--- a/tests/unit/htmleditor/basicfunctionalities/rendering/tests.html
+++ b/tests/unit/htmleditor/basicfunctionalities/rendering/tests.html
@@ -1349,7 +1349,7 @@
             test("Are Text toolbar items rendered?", function () {
                 this.areTextToolbarItemsRendered();
             });
-            QUnit.skip("Are Formatting toolbar items rendered?", function () {
+            test("Are Formatting toolbar items rendered?", function () {
 				/* Temporary ignore this test to avoid crashes in PhantomJS on the build machine*/
                 this.areFormattingToolbarItemsRendered();
             });
